# crates/test-support/src/models.rs
@@ -40,6 +40,7 @@ pub fn test_order() -> Order {
         status: OrderStatus::Open,
         reject_reason: None,
         position_id: None,
+        parent_order_id: None,
         reduce_only: None,
         post_only: None,
         hidden: None,
